--- a/app/src/main/res/layout/activity_start_challenge.xml
+++ b/app/src/main/res/layout/activity_start_challenge.xml
@@ -17,14 +17,14 @@
         android:layout_weight="1" >
 
         <ImageView
+            android:id="@+id/challengePicIv"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/imageView"
             android:layout_gravity="center"
             android:layout_weight="1" />
 
         <fragment
-            android:id="@+id/map"
+            android:id="@+id/mapFragment"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
