--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.doers.games.geohangman.controllers.SelectLocationHintActivity">
+    tools:context="com.doers.games.geohangman.controllers.challenger_activities.SelectLocationHintActivity">
 
     <fragment
         android:id="@+id/map"
