--- a/app/src/main/res/layout/activity_send_challenge.xml
+++ b/app/src/main/res/layout/activity_send_challenge.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.doers.games.geohangman.controllers.SendChallengeActivity">
+    tools:context="com.doers.games.geohangman.controllers.challenger_activities.SendChallengeActivity">
 
     <TextView
         android:layout_width="wrap_content"
