--- a/app/src/main/res/layout/activity_take_pic.xml
+++ b/app/src/main/res/layout/activity_take_pic.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.doers.games.geohangman.controllers.TakePicActivity">
+    tools:context="com.doers.games.geohangman.controllers.challenger_activities.TakePicActivity">
 
     <Button
         style="?android:attr/buttonStyleSmall"
